--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-   
     "framer-motion": "^7.5.1",
     "next": "12.3.1",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-simple-typewriter": "^4.0.2",
     "react-social-icons": "^5.15.0"
   },
